clusters/management-hub/traefik-tnet/dashboard-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-tnet-dashboard
  namespace: traefik-tnet
  annotations:
    kubernetes.io/ingress.class: traefik-tnet
    external-dns.alpha.kubernetes.io/hostname: traefik-tnet.nwlnexus.net
    external-dns.alpha.kubernetes.io/target: ing.mgmt.nwlnexus.net
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`traefik-tnet.nwlnexus.net`) && (PathPrefix(`/dashboard`) || PathPrefix(`/api`))
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
  tls:
    secretName: traefik-tnet-dashboard-tls
